src/ingress/x_ingress_resource.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-myservice1
spec:
  backend:
    serviceName: myservice1
    servicePort: 80
