src/ingress/x_ingress_resource_2domains1path_each.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp
spec:
  rules:
    - host: myservice1.dd.com
      http:
        paths:
          - path: /service1
            backend:
              servicePort: 80
              serviceName: myservice1
    - host: myservice2.dd.com
      http:
        paths:
          - path: /service2
            backend:
              servicePort: 80
              serviceName: myservice2
